Refactor CORS allowed origins to use Arrays.asList
Updated CORS configuration to use Arrays.asList for allowed origins.